--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.application.name=api-weather
 springdoc.api-docs.path=/v3/api-docs
 springdoc.swagger-ui.path=/swagger-ui.html
+openweather.api.url=https://api.openweathermap.org/data/2.5/forecast
+openweather.api.key=100a7dd4a784b6422240e3c1a40ee271
